[gd_scene load_steps=10 format=3 uid="uid://cdtwlqib6gbvr"]

[ext_resource type="Texture2D" uid="uid://cfn5m64nrdns6" path="res://Asset/weapon/sword/Warp Razor.png" id="1_6wm7e"]
[ext_resource type="Script" path="res://Scene/skill/warrior/slash/slash.gd" id="1_u1vll"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w3ufq"]
radius = 250.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8iqjj"]
size = Vector2(9.67047, 50.3588)

[sub_resource type="Animation" id="Animation_ly6pf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Range/Marker2D/Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.523599]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Range/Marker2D/Sword:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 4)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:aura_slash")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_h3mep"]
resource_name = "slash_0"
length = 0.16667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Range/Marker2D/Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 3),
"update": 0,
"values": [-0.523599, 1.74533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_cg2cx"]
resource_name = "slash_1"
length = 0.16667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Range/Marker2D/Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 3),
"update": 0,
"values": [1.74533, -0.523599]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_xs52r"]
resource_name = "slash_2"
length = 0.333337
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Range/Marker2D/Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.166667, 0.233333, 0.333333),
"transitions": PackedFloat32Array(1, 3.24901, 1, 1, 1),
"update": 0,
"values": [Vector2(80, 4), Vector2(20, 4), Vector2(10, 4), Vector2(20, 4), Vector2(100, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Range/Marker2D/Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.523599, 0.785398]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:aura_slash")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.166667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vowvd"]
_data = {
"RESET": SubResource("Animation_ly6pf"),
"slash_0": SubResource("Animation_h3mep"),
"slash_1": SubResource("Animation_cg2cx"),
"slash_2": SubResource("Animation_xs52r")
}

[node name="Slash" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_u1vll")

[node name="Range" type="CollisionShape2D" parent="."]
position = Vector2(7, -7)
shape = SubResource("CircleShape2D_w3ufq")

[node name="Marker2D" type="Marker2D" parent="Range"]

[node name="Sword" type="Sprite2D" parent="Range/Marker2D"]
unique_name_in_owner = true
position = Vector2(80, 4)
rotation = -0.523599
scale = Vector2(4, 4)
texture = ExtResource("1_6wm7e")
centered = false
offset = Vector2(-5, -27)

[node name="AttackArea" type="Area2D" parent="Range/Marker2D/Sword"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range/Marker2D/Sword/AttackArea"]
position = Vector2(10.9759, -10.7163)
rotation = 0.785398
shape = SubResource("RectangleShape2D_8iqjj")

[node name="AuraPoint" type="Marker2D" parent="Range/Marker2D/Sword"]
unique_name_in_owner = true
position = Vector2(30, -30)
rotation = -0.785398

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_vowvd")
}

[connection signal="area_entered" from="Range/Marker2D/Sword/AttackArea" to="." method="_on_attack_area_area_entered"]
[connection signal="body_entered" from="Range/Marker2D/Sword/AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
